<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#3F51B5"
        android:gravity="center"
        android:text="@string/m_y_t_nh_c_ng_c_ng"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/s_a"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/soa"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/vui_l_ng_nh_p"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/s_b"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/sob"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/vui_l_ng_nh_p"
            android:inputType="number" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtKetQua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:gravity="center" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/t_ng_2_s" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/hi_u_2_s" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/t_ch_2_s" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/th_ng_2_s" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/c_chung_l_n_nh_t" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal">

        <Button
            android:id="@+id/button6"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:text="@string/tho_t_ch_ng_tr_nh" />
    </LinearLayout>

</LinearLayout>